unpackaged/main/default/objects/Framework__System_Log__c/Framework__System_Log__c.object-meta.xml
<CustomObject>
    <description>Fonteva System Logs captures diagnostic and debugging data for all exceptions handled by Registered Apps using the Fonteva Framework.</description>
    <label>System Log</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>System Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>