unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Data__c.field-meta.xml
<CustomField>
    <fullName>Framework__Data__c</fullName>
    <description>Data contains the current log at the time the System Log was generated either by an exception, Registered App event, Fonteva Framework event, or user triggered event.</description>
    <inlineHelpText>Data contains the current log at the time the System Log was generated either by an exception, Registered App event, Fonteva Framework event, or user triggered event.</inlineHelpText>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>