unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Exception_Data__c.field-meta.xml
<CustomField>
    <fullName>Framework__Exception_Data__c</fullName>
    <description>Exception data contains information specifically related to exceptions handled by the Fonteva Platform including code line number, exception message, exception type, as well as blamed Registered App and/or Registered Object when applicable.</description>
    <inlineHelpText>Exception data contains information specifically related to exceptions handled by the Fonteva Platform including code line number, exception message, exception type, as well as blamed Registered App and/or Registered Object when applicable.</inlineHelpText>
    <label>Exception Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>