unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Is_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Framework__Is_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the log has shipped to our remote logging server.</description>
    <inlineHelpText>Whether or not the log has shipped to our remote logging server.</inlineHelpText>
    <label>Is Shipped</label>
    <type>Checkbox</type>
</CustomField>