unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Path__c.field-meta.xml
<CustomField>
    <fullName>Framework__Path__c</fullName>
    <description>The path of the requested URL from the user who created the System Log.</description>
    <inlineHelpText>The path of the requested URL from the user who created the System Log.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>