unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Registered_App__c.field-meta.xml
<CustomField>
    <fullName>Framework__Registered_App__c</fullName>
    <description>The display name of the Registered App that generated the log.</description>
    <inlineHelpText>The display name of the Registered App that generated the log.</inlineHelpText>
    <label>Registered App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>