unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Registered_Object__c.field-meta.xml
<CustomField>
    <fullName>Framework__Registered_Object__c</fullName>
    <description>The full api name of the Registered Object that generated the System Log.</description>
    <inlineHelpText>The full api name of the Registered Object that generated the System Log.</inlineHelpText>
    <label>Registered Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>