unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__Type__c.field-meta.xml
<CustomField>
    <fullName>Framework__Type__c</fullName>
    <description>**System Calculated** Populates with a general description of the event that triggered the System Log.</description>
    <inlineHelpText>**System Calculated** Populates with a general description of the event that triggered the System Log.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>