unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Framework__User_Profile__c</fullName>
    <description>The user profile.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; CreatedBy.ProfileId, CreatedBy.Profile.Name , &quot;_blank&quot;)</formula>
    <inlineHelpText>The user profile.</inlineHelpText>
    <label>User Profile</label>
    <type>Text</type>
</CustomField>