unpackaged/main/default/objects/Framework__System_Log__c/fields/Framework__User_Type__c.field-meta.xml
<CustomField>
    <fullName>Framework__User_Type__c</fullName>
    <description>The user type.</description>
    <formula>TEXT(CreatedBy.UserType)</formula>
    <inlineHelpText>The user type.</inlineHelpText>
    <label>User Type</label>
    <type>Text</type>
</CustomField>