unpackaged/main/default/objects/Framework__System_Log__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Framework__Registered_App__c</columns>
    <columns>Framework__Registered_Object__c</columns>
    <columns>Framework__Type__c</columns>
    <columns>Framework__Path__c</columns>
    <columns>Framework__User_Type__c</columns>
    <columns>Framework__User_Profile__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>